# nep29

./: .gitattributes  .travis.yml  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pypi.yaml  test.yml
docs/: AUTHORS.md  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
nep29/: __init__.py  _version.py  nep29.py
nep29/tests/: __init__.py  test_nep29.py
