[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = NEP29 Calculator/_version.py
versionfile_build = NEP29 Calculator/_version.py
tag_prefix =
parentdir_prefix = NEP29 Calculator-
