[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs
    versioneer.py
    nep29/_version.py

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = nep29/_version.py
versionfile_build = nep29/_version.py
tag_prefix =
parentdir_prefix = nep29-
